syntax = "proto3";

package chat.v1;

option go_package = "gen/chat/v1;chatpb";

message ChatMessage {
  string user = 1;
  string content = 2;
}

service ChatService {
  rpc ChatStream(stream ChatMessage) returns (stream ChatMessage);
}
