syntax = "proto3";

package hello.v1;

option go_package = "gen/hello/v1;hellopb";

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

service HelloService {
  rpc SayHello(HelloRequest) returns (HelloReply);
}